--- a/style/xlg.scss
+++ b/style/xlg.scss
@@ -30,6 +30,15 @@
             ". timeLine . ."
             ".timeLine container .";
     }
+    .home {
+        .container{
+            clip-path: polygon(0 0, 80% 0%, 100% 100%, 0% 100%);
+        }
+        .bckImage .heroImg {
+            position: absolute;
+            left: calc(15vw + 817px);
+        }
+    }
     //about//about
     .about .codeLine {
         &:hover {
