--- a/style/main.scss
+++ b/style/main.scss
@@ -20,6 +20,7 @@ body {
 }
 
 .link {
+    color: $lighted;
     text-decoration: none;
 }
 // Grid settings
@@ -39,7 +40,7 @@ body {
     grid-template-areas:
         ". timeLine ."
         ".timeLine container";
-    background-image: linear-gradient(0deg, $background2 0%, $background1 80%);
+    background-image: linear-gradient(0deg, $background1 0%, $background2 10%, $background1 80%);
 }
 aside {
     position: relative;
@@ -79,6 +80,7 @@ aside {
     }
 }
 .container {
+    position: relative;
     grid-area: container;
     padding: 0 1rem;
     z-index: 1;
@@ -181,7 +183,6 @@ nav {
 // Header
 .home {
     position: relative;
-    background-color: $background1;
     .circle {
         top: 1rem;
     }
@@ -191,10 +192,10 @@ nav {
         width: 100%;
         height: 100%;
         z-index: 0;
-        background-color: #000000;
+        background-image: linear-gradient(0deg, $background1 0%, #000000 5%);
         .heroImg {
             position: absolute;
-            top:50%;
+            top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
         }
@@ -203,7 +204,8 @@ nav {
         }
     }
     .container {
-        background-color: #0f1a24ec;
+        background-image: linear-gradient(180deg, #0f1a24ec 0%, $background1 98%);
+        border-top-right-radius: 25px;
     }
 
     h1 span {
@@ -383,7 +385,6 @@ nav {
         margin-bottom: 2rem;
     }
     .link {
-        color: $lighted;
         margin-right: 2rem;
     }
 }
