--- a/style/main.scss
+++ b/style/main.scss
@@ -260,6 +260,9 @@ nav {
             width: 120%;
             background-color: $lighted;
         }
+        .pr_title {
+            font-size: 1.2rem;
+        }
         .pr_info {
             color: $mutedProjectInfo;
         }
